| Summary: | ASTERISK-24427: Documentation is missing for a few AMI Events - Including CDR and events triggered after the QueueStatus action | ||||||
| Reporter: | Dafi Ni (dafi) | Labels: | |||||
| Date Opened: | 2014-10-17 01:41:55 | Date Closed: | 2022-01-05 10:31:40.000-0600 | ||||
| Priority: | Minor | Regression? | |||||
| Status: | Closed/Complete | Components: | Documentation | ||||
| Versions: | 12.6.0 13.0.0-beta1 | Frequency of Occurrence | |||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ||||||
| Description: | during the work with ami manager i found a few events which have lack of documentation and do not known what they return without searching in asterisk source files
these events are: * Cdr event * QueueStatus - Action responses : ** QueueParams event ** QueueMember event ** QueueEntry event | ||||||
| Comments: | By: Matt Jordan (mjordan) 2014-10-28 09:24:46.717-0500 The XML documentation schema does not contain elements for Action responses until Asterisk 13. While that schema does now exist, it has not yet been applied to the vast majority of the Actions in AMI. If you'd like to provide a patch that does it, it would be greatly appreciated - but the lack of documentation for these things is not a bug, and is not likely to receive a lot of immediate attention without a patch. The same is true for the "Cdr" event, emitted by {{cdr_manager}}. If you'd like to provide a patch for that event it would be greatly appreciated; however, without a patch, it is unlikely to receive immediate attention. By: Dafi Ni (dafi) 2014-10-29 03:39:27.997-0500 I've marked this issue as an improvement, not as a bug. ok, i will try write some patches. Where can I find the above mentioned XML schema ? You mean : https://wiki.asterisk.org/wiki/display/AST/AMI+Event+Documentation#AMIEventDocumentation-XMLSchema or maybe there is another document for Action related Events ? By: Matt Jordan (mjordan) 2014-11-13 17:27:59.675-0600 [~dafi]: Sorry, I didn't see your comment. The XML DTD is located with the source in the {{doc}} folder. The {{trunk}} version is here: http://svn.asterisk.org/svn/asterisk/trunk/doc/appdocsxml.dtd By: Rusty Newton (rnewton) 2014-11-17 15:22:37.288-0600 I'm opening this up and assigning this to you, [~dafi] since you said you are going to work on some patches. When you have a patch, you can put them up on Review board, following the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. After you get them on there you can link the Reviewboard URL here so others can find it as well. By: Rusty Newton (rnewton) 2015-11-04 18:49:10.460-0600 ASTERISK-25511 was reported which duplicates this issue {quote} All of the wiki articles are missing pages for the AMI Events: QueueParams and QueueMember which are generated when the AMI Action QueueStatus is executed. Additionally, it should be noted that the fields 'queue' and 'member' in the QueueStatus AMI Action are optional, and leaving them blank will return QueueParams events and QueueMember events for all queues and their members. {quote} By: Friendly Automation (friendly-automation) 2022-01-05 10:31:41.701-0600 Change 17808 merged by Friendly Automation: documentation: Add missing AMI documentation [https://gerrit.asterisk.org/c/asterisk/+/17808|https://gerrit.asterisk.org/c/asterisk/+/17808] By: Friendly Automation (friendly-automation) 2022-01-05 10:32:49.642-0600 Change 17650 merged by Friendly Automation: documentation: Add missing AMI documentation [https://gerrit.asterisk.org/c/asterisk/+/17650|https://gerrit.asterisk.org/c/asterisk/+/17650] By: Friendly Automation (friendly-automation) 2022-01-05 10:55:00.487-0600 Change 17806 merged by Joshua Colp: documentation: Add missing AMI documentation [https://gerrit.asterisk.org/c/asterisk/+/17806|https://gerrit.asterisk.org/c/asterisk/+/17806] By: Friendly Automation (friendly-automation) 2022-01-05 10:55:14.621-0600 Change 17807 merged by Joshua Colp: documentation: Add missing AMI documentation [https://gerrit.asterisk.org/c/asterisk/+/17807|https://gerrit.asterisk.org/c/asterisk/+/17807] | ||||||